--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,8 @@ workflows:
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
+       build:
+        filters:
+            branches:
+              only:
+                - development
